--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             <div class="main">
                 <div class="register">
                     <h2>Register Here</h2>
-                    <form method="post" id="register">
+<!--                     <form method="post" id="register">
                         <label >First Name:</label>
                         <br>
                         <input type="text" name="fname" id="name" placeholder="Enter Your  First Name">
@@ -137,7 +137,7 @@
                         <span id="Tamil">Tamil</span>
                         <br><br>
                         <input type="submit" value="submit" name="submit" id="submit" >
-
+ -->
                 
 
                         
